# Tactile-Graphic-Helper

./: CMakeLists.txt
include/: BackgroundGenerator.h  FeatureInfo.h  FingerTracker.h  Fingertip.h  FrameGrabber.h  Lattice.hpp  SOM.hpp  TGH.h  TGModel.h  cursor.h  old.cpp  robustLine.h
src/: BackgroundGenerator.cpp  Cursor.cpp  FeatureInfo.cpp  FingerTracker.cpp  Fingertip.cpp  FrameGrabber.cpp  Lattice.cpp  SOM.cpp  TGH.cpp  TGModel.cpp  main.cpp  robustline.cpp  stdafx.cpp
